bad overflow behavior fixed

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body > div {
   border-color: #000;
   border-width: 10px;
   height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
